<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".sample.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_about"
        android:paddingBottom="20dp"
        android:textSize="18sp"
        android:textColor="@color/colorCaptionText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_caution"
        android:textSize="13sp"
        android:textColor="@color/colorCaution"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_key_phrase"
            android:textSize="15sp"
            android:textColor="@color/colorCaptionText"/>

        <EditText
            android:id="@+id/etKeyPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="This is sample enchrypt text"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_enchrypted_str"
        android:textSize="17sp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorCaptionText"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:id="@+id/etOriginalTxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:minHeight="70dp"/>
        <Button
            android:id="@+id/btnEnchrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_enchrypt"
            android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:drawableStart="@drawable/ic_keyboard_arrow_down_black_24dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_dechrypted_str"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorCaptionText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etEnchryptedTxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:minHeight="70dp"/>
        <Button
            android:id="@+id/btnDechrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dechrypt"
            android:drawableLeft="@drawable/ic_keyboard_arrow_up_black_24dp"
            android:drawableStart="@drawable/ic_keyboard_arrow_up_black_24dp"/>

    </LinearLayout>


</LinearLayout>
